k8s/prod/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: prod
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
