k8s/prod/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prod
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
