k8s/prod/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: prod
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
